# django-dataclassconf

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/django_dataclassconf/: __init__.py  conf.py
test/: manage.py
test/appconf_test/: apps.py  config.py  tests.py
test/projectconf_test/: asgi.py  settings.py  urls.py  wsgi.py
